--- a/style.css
+++ b/style.css
@@ -11,16 +11,23 @@
     --laranja: #EB9B00;
     --azul_degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte_principal: "Poppins";
+    --fonte_secundária: "Josefin Sans";
     --azul: #002F52;
     --preto: #000000;
+    --cinza: #474646;
+    --cinza_claro: #858585;
+    
 }
 
 body {
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte_principal);
+
     font-size: 16px;
     font-weight: 400;
 }
+
+
 
 
 
