--- a/styles/banner.css
+++ b/styles/banner.css
@@ -2,12 +2,13 @@
     background: var(--azul_degrade);
     color: var(--branco);
     text-align: center;
+
 }
 
 .banner_titulo {
     font-size: 18px;
     font-weight: 700;
-    padding: 1em;
+    padding: 2em 0 0.5em;
 }
 
 .banner_texto {
@@ -23,7 +24,7 @@
     border-radius: 24px;
     padding: 1em;
     margin: 1em;
-    width: 85%;
+    width: 70%;
 }
 
 .banner_pesquisa::placeholder {
@@ -34,6 +35,40 @@
     align-items: center;
     color: var(--branco);
     background: url("../img/Lupa.svg") no-repeat;
-    background-position: 1em;
+    background-position: 2em;
 }
 
+@media screen and (min-width: 1024px) {
+    .banner_titulo {
+        font-size: 36px;
+        font-weight: 700;
+        padding: 0;
+    }
+
+    .banner_pesquisa {
+        width: 50%;
+    }
+    .banner_pesquisa::placeholder {
+        background-position: 7em;
+    }
+    .banner {
+        padding: 6em 0;
+    }
+
+}
+
+@media screen and (min-width: 1728px) {
+    .banner_pesquisa {
+       width: 50%; 
+    }
+
+    .banner_pesquisa::placeholder {
+        background-position: 12em;
+    }
+    .banner {
+        padding: 6em 0;
+    }
+    .banner_titulo {
+        padding: 0;
+    }
+}
