--- a/styles/carrosel.css
+++ b/styles/carrosel.css
@@ -1,4 +1,4 @@
-.carrosel_titulo {
+.carrossel_titulo {
     color: var(--laranja);
     background-color: var(--branco);
     text-align: center;
@@ -82,4 +82,61 @@
 }
 
 
+@media screen and (min-width: 1024px) {
+    .carrossel_titulo {
+        font-size: 26px;
+    }
 
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+
+    .swiper {
+        width: 60%;
+    }
+
+    .swiper-button-next, .swiper-button-prev {
+        display: block;
+        top: 60%;
+    }
+    .card {
+        width: 40%;
+        margin: 2em auto;
+    }
+
+    .descrição_titulo {
+        font-size: 26px;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .carrossel_conteiner {
+        display: flex;
+        margin: 0 15vw 3em 15vw;
+        align-items: center;
+    }
+    .swiper-pagination {
+        margin: 1em 0;
+    }
+    .swiper {
+        width: 50%;
+    }
+    .descrição_titulo {
+        font-size: 32px;
+    }
+    .descrição_titulo_livro {
+        font-size: 18px;
+    }
+    .descrição_texto {
+        font-size: 16px;
+    }
+    .card {
+        width: 60%;
+        margin-left: 3em;
+    }
+    .descrição {
+        margin-right: 1em;
+    }
+
+
+}
