--- a/styles/rodapé.css
+++ b/styles/rodapé.css
@@ -6,3 +6,56 @@
     background-color: var(--branco);
     padding: 1em;
 }
+
+.lista_rodapé {
+    display: none;
+}
+.rodapé_título {
+    text-align: center;
+}
+
+@media screen and (min-width: 1024px){
+    .lista_rodapé {
+        display: block;     /*Colocamos display block para quando tivermos no mobile para que essa lista desapareça*/
+    }
+
+    .rodapé {
+        display: flex;
+        justify-content: space-around;
+    }
+    .lista_rodapé_item {
+        display: flex;
+        align-items: center;
+        margin: 0.6em 0;
+    }
+
+    .lista_rodapé_link {
+        color: var(--cinza);
+        text-decoration: none;
+        margin-left: 1em;
+    }
+
+    .lista_rodapé_título {
+        color: var(--cinza_claro);
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 14px;
+    }
+    .rodapé_título {
+        font-weight: 400;
+        font-size: 24px;
+
+    }
+
+    @media screen and (min-width: 1728px) {
+        .lista_rodapé {
+            border-left: 1px solid var(--cinza_claro);
+            padding-left: 1em;
+        }
+
+        .rodapé {
+            padding: 3em 0;
+        }
+    }
+
+}
