--- a/styles/tópicos.css
+++ b/styles/tópicos.css
@@ -20,14 +20,32 @@
 }
 
 .tópicos_item {
-    margin: 1.6em 0.5em;
+    margin: 2.5em 0.5em;
 }
 
 .tópicos_link {
     color: var(--branco);
-    padding: 1em;
+    padding: 2em 2em;
     background-color: var(--laranja);
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
+}
+
+@media screen and (min-width: 1024px) {
+    .tópicos_título {
+        font-size: 24px;
+    }
+    .tópicos_link {
+        font-size: 24px;
+    }
+    .tópicos_item {
+        margin: 4em 1em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .tópicos {
+        padding: 1em 20vw;
+    }
 }
